# webgpu-engine

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-02-20-3d-pipeline-design.md  2026-02-20-3d-pipeline.md  2026-02-20-ecs-foundation.md  2026-02-20-phase3-input-physics-design.md  2026-02-20-phase3-input-physics.md  2026-02-20-textures-materials.md  2026-02-20-webgpu-init-design.md  2026-02-20-webgpu-init.md  2026-02-20-webunity-roadmap-design.md  2026-02-21-phase4-lighting-design.md  2026-02-21-phase4-lighting-implementation.md  2026-02-21-phase5-scenes-design.md  2026-02-21-phase5-scenes-implementation.md  2026-02-21-phase6-pbr-shadows-design.md  2026-02-21-phase6-pbr-shadows-implementation.md  2026-02-22-web-editor-design.md  2026-02-22-web-editor-implementation.md  2026-02-22-webunity-editor-fps-ready-design.md  2026-02-22-webunity-fps-implementation.md  2026-02-23-webunity-editor-v2.md  2026-02-25-grouping-design.md
editor/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
editor/src/: App.tsx
editor/src/ai/: contextBuilder.ts  llmOrchestrator.ts  toolExecutor.ts  toolRegistry.ts
engine-core/: Cargo.toml
engine-core/pkg/: .gitignore  engine_core.d.ts  engine_core.js  engine_core_bg.wasm  engine_core_bg.wasm.d.ts  package.json
engine-core/src/: camera.rs  lib.rs  mesh.rs  scene.rs  shader.wgsl  shadow.wgsl
game-app/: index.html  package-lock.json  package.json  vite.config.ts
game-app/src/: main.ts
src/: lib.rs  mesh.rs  scene.rs  shader.wgsl
src/ecs/: components.rs  mod.rs  sparse_set.rs
(+43 files in other folders)
