[package]
name = "engine-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
console_error_panic_hook = "0.1"
glam     = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1",    features = ["derive"] }

web-sys = { version = "0.3", features = [
    "console",
    "HtmlCanvasElement",
] }

[dependencies.wgpu]
version = "28"
default-features = false
features = [
    "webgpu",
    "wgsl",
]
